# ricer

./: .envrc.cache  .gitignore  README.md  config.py  flake.nix  install.sh  main.py  pyproject.toml  ricer.nix  ricer_schema.json  setup.py  shell.nix  switch.py
config/: ricer.yml
examples/example_dotfiles_repo/: README.md
examples/example_dotfiles_repo/built_themes/: README.md
examples/example_dotfiles_repo/templates/: README.md
examples/example_dotfiles_repo/themes/: README.md
examples/example_dotfiles_repo/user_scripts/: README.md  dummy_script.sh
scripts/: generate_schema.py  ricer
src/: ricer.py
src/ricer/: cli.py  config.py  main.py  ricer.py  switch.py
src/ricer/default_cfg_files/: ricer-global-before.yml  ricer.yml
src/ricer/hooks/: adw-gtk3.sh
src/ricer/tools/: __init__.py  alacritty.py  apps.py  bash.py  colors.py  custom.py  dunst.py  fastfetch.py  fish.py  global_settings.py  gtk.py  hyprland.py  i3.py  kitty.py  nvim.py  okular.py  picom.py  polybar.py  qt.py  rofi.py  sioyek.py  tmux.py  wallpaper.py  waybar.py  yazi.py  zsh.py
src/ricer/utils/: args.py  colors.py  common.py  generate_schema.py  install.py  theme_data.py  types.py  validate.py  wrapper.py
src/tools/: alacritty.py  apps.py  bash.py  colors.py  dunst.py  fastfetch.py  fish.py  global_settings.py  i3.py  kitty.py  nvim.py  okular.py  picom.py  polybar.py  rofi.py  tmux.py  wallpaper.py  yazi.py  zsh.py
src/utils/: args.py  colors.py  types.py  wrapper.py
tests/: test_cfg.yml  test_color_manual.py  test_color_pywal.py  test_polybar.py
(+10 files in other folders)
